fix : adjust image spacing

--- a/style.css
+++ b/style.css
@@ -513,6 +513,8 @@ footer {
 
   .popup_folder_name_change-box {
     padding: 60px 30px 30px 30px;
+    display: flex;
+    justify-content: center;
   }
 
   .popup_folder_name_change {
@@ -529,14 +531,18 @@ footer {
   }
 
   .popup_folder_share {
-    inset: 30px 0 0 -10px;
-    padding: 10%;
+    inset: 30px 0 0 -20px;
+    padding: 15%;
   }
 
   .codeit_search_image-box {
     min-width: 400px;
-    height: 320px;
+    max-height: 270px;
   } 
+
+  .codeit_search_image {
+    inset: 36px 129px 189px 36px;
+  }
 
   footer {
     display: flex;
